# kioku

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md
.claude/: settings.json
.claude/commands/: capture.md  daily.md  process.md  push-related.md
.launchd/: daily.plist  weekly.plist
daily/: 2026-03-23.md
docs/: architecture-v1.md  memory-design-v2.md  notification-policy-v1.md  overview-v1.md  security-v1.md  setup-v1.md
memory/: __main__.py  chunker.py  cli.py  config.py  embedder.py  engine.py  pyproject.toml
memory/tests/: test_chunker.py  test_engine.py
notes/ideas/: 2026-03-20-ebay-automation.md
notes/research/: 2026-03-21-semantic-search.md
notes/tasks/: 2026-03-22-docs-update.md
reports/: memory-eval-2026-03-23.md  memory-eval-vector-2026-03-23.md
scripts/: daily-summary.sh  memory-setup.sh  proactive-check.sh  weekly-review.sh
