[project]
name = "kioku-memory"
version = "0.1.0"
description = "セマンティック記憶エンジン for kioku"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.1",
]

[project.optional-dependencies]
onnx = [
    "onnxruntime>=1.17.0",
]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
